# stl-workshop

./: CMakeLists.txt  README.md
tests/: fixture.hpp  test_01-sum.cpp  test_02-minmax.cpp  test_03-find.cpp  test_04-rotate.cpp  test_05-partial.cpp  test_06-partial_sort.cpp  test_07-partition.cpp  test_08-remove_duplicates.cpp  test_09-find_diff.cpp  test_10-sum_two_containers.cpp  test_11-get_just_odd.cpp
workshop/: 01-sum.hpp  02-minmax.hpp  03-find.hpp  04-rotate.hpp  05-partial.hpp  06-partial_sort.hpp  07-partition.hpp  08-remove_duplicates.hpp  09-find_diff.hpp  10-sum_two_containers.hpp  11-get_just_odd.hpp
